--- a/src/api/Dockerfile.vid_vec_rep_resnet
+++ b/src/api/Dockerfile.vid_vec_rep_resnet
@@ -30,7 +30,7 @@ export THP_MEM_ALLOC_ENABLE=1
 
 # Make sure the openmp threads are distributed across all the processes for multi process applications to avoid over subscription for the vcpus. For example if there is a single application process, then num_processes should be set to '1' so that all the vcpus are assigned to it with one-to-one mapping to omp threads
 num_vcpus=$(getconf _NPROCESSORS_ONLN)
-num_processes=<number of processes>
+num_processes=1
 export OMP_NUM_THREADS=$((1 > ($num_vcpus/$num_processes) ? 1 : ($num_vcpus/$num_processes)))
 export OMP_PROC_BIND=false
 export OMP_PLACES=cores
