--- a/.github/workflows/docker-push-vidvec.yml
+++ b/.github/workflows/docker-push-vidvec.yml
@@ -6,18 +6,22 @@ jobs:
   api:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           ref: master
+      - name: "Setup Node version"
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.9.0
       - name: Declare some variables
         id: vars
         shell: bash
         run: |
           echo "setting variables"
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          echo "name=sha_short::$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - uses: elgohr/Publish-Docker-Github-Action@master
         with:
           username: tattletech
