Update configs - Disabled feluda reporter from docker compose file - Disabled rabbitmq - Removed operator specific packages from feluda core - Regenerated feluda core requirements - Enabled debian bullseye in core feluda for AWS Graviton support - Removed apt-get packages from feluda core dockerfile - Updated torch version in vid vec requirements.in - Added graviton dockerfile - Updated vid vec github action to create dockerfile per arch

--- a/.github/workflows/docker-push-vidvec.yml
+++ b/.github/workflows/docker-push-vidvec.yml
@@ -30,7 +30,16 @@ jobs:
           workdir: src/api/
           dockerfile: Dockerfile.vid_vec_rep_resnet
           tags: ${{ steps.vars.outputs.sha_short }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+      - uses: elgohr/Publish-Docker-Github-Action@main
+        with:
+          username: tattletech
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          name: tattletech/feluda-operator-vidvec
+          workdir: src/api/
+          dockerfile: Dockerfile.vid_vec_rep_resnet.graviton
+          tags: ${{ steps.vars.outputs.sha_short }}
+          platforms: linux/arm64
 
       # - name: deploy to cluster
       #   uses: steebchen/kubectl@v2.0.0
