--- a/src/api/requirements.in
+++ b/src/api/requirements.in
@@ -1,13 +1,10 @@
 flask==2.3.2
 flask_cors==3.0.9
-google-cloud==0.34.0
-google-cloud-vision==3.5.0
 Pillow==10.2.0
 elasticsearch==8.11.1
 wget==3.2
 pika==1.3.2
 python-dotenv==1.0.0
-boto3==1.34.34
 click==8.1.7
 pytest==7.4.4
 PyYAML==6.0.1
@@ -15,3 +12,4 @@ dacite==1.8.1
 memray==1.11.0  # dev
 pyinstrument==4.6.2
 numpy==1.26.3
+requests==2.31.0
