--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -6,14 +6,6 @@
 #
 blinker==1.7.0
     # via flask
-boto3==1.34.34
-    # via -r requirements.in
-botocore==1.34.36
-    # via
-    #   boto3
-    #   s3transfer
-cachetools==5.3.2
-    # via google-auth
 certifi==2024.2.2
     # via
     #   elastic-transport
@@ -36,26 +28,6 @@ flask==2.3.2
     #   flask-cors
 flask-cors==3.0.9
     # via -r requirements.in
-google-api-core[grpc]==2.16.2
-    # via
-    #   google-api-core
-    #   google-cloud-vision
-google-auth==2.27.0
-    # via google-api-core
-google-cloud==0.34.0
-    # via -r requirements.in
-google-cloud-vision==3.5.0
-    # via -r requirements.in
-googleapis-common-protos==1.62.0
-    # via
-    #   google-api-core
-    #   grpcio-status
-grpcio==1.60.1
-    # via
-    #   google-api-core
-    #   grpcio-status
-grpcio-status==1.60.1
-    # via google-api-core
 idna==3.6
     # via requests
 iniconfig==2.0.0
@@ -66,10 +38,6 @@ jinja2==3.1.3
     # via
     #   flask
     #   memray
-jmespath==1.0.1
-    # via
-    #   boto3
-    #   botocore
 linkify-it-py==2.0.3
     # via markdown-it-py
 markdown-it-py[linkify,plugins]==3.0.0
@@ -97,56 +65,32 @@ pillow==10.2.0
     # via -r requirements.in
 pluggy==1.4.0
     # via pytest
-proto-plus==1.23.0
-    # via google-cloud-vision
-protobuf==4.25.2
-    # via
-    #   google-api-core
-    #   google-cloud-vision
-    #   googleapis-common-protos
-    #   grpcio-status
-    #   proto-plus
-pyasn1==0.5.1
-    # via
-    #   pyasn1-modules
-    #   rsa
-pyasn1-modules==0.3.0
-    # via google-auth
 pygments==2.17.2
     # via rich
 pyinstrument==4.6.2
     # via -r requirements.in
 pytest==7.4.4
     # via -r requirements.in
-python-dateutil==2.8.2
-    # via botocore
 python-dotenv==1.0.0
     # via -r requirements.in
 pyyaml==6.0.1
     # via -r requirements.in
 requests==2.31.0
-    # via google-api-core
+    # via -r requirements.in
 rich==13.7.0
     # via
     #   memray
     #   textual
-rsa==4.9
-    # via google-auth
-s3transfer==0.10.0
-    # via boto3
 six==1.16.0
-    # via
-    #   flask-cors
-    #   python-dateutil
-textual==0.48.2
+    # via flask-cors
+textual==0.50.1
     # via memray
 typing-extensions==4.9.0
     # via textual
-uc-micro-py==1.0.2
+uc-micro-py==1.0.3
     # via linkify-it-py
-urllib3==2.0.7
+urllib3==2.2.0
     # via
-    #   botocore
     #   elastic-transport
     #   requests
 werkzeug==3.0.1
