--- a/src/api/requirements.in
+++ b/src/api/requirements.in
@@ -1,5 +1,5 @@
 flask==2.3.2
-flask_cors==3.0.9
+flask_cors==3.0.10
 Pillow==10.2.0
 elasticsearch==8.11.1
 wget==3.2
@@ -13,3 +13,4 @@ memray==1.11.0  # dev
 pyinstrument==4.6.2
 numpy==1.26.3
 requests==2.31.0
+locust==2.23.1
