--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -6,9 +6,12 @@
 #
 blinker==1.7.0
     # via flask
+brotli==1.1.0
+    # via geventhttpclient
 certifi==2024.2.2
     # via
     #   elastic-transport
+    #   geventhttpclient
     #   requests
 charset-normalizer==3.3.2
     # via requests
@@ -16,6 +19,8 @@ click==8.1.7
     # via
     #   -r requirements.in
     #   flask
+configargparse==1.7
+    # via locust
 dacite==1.8.1
     # via -r requirements.in
 elastic-transport==8.12.0
@@ -26,8 +31,22 @@ flask==2.3.2
     # via
     #   -r requirements.in
     #   flask-cors
-flask-cors==3.0.9
-    # via -r requirements.in
+    #   flask-login
+    #   locust
+flask-cors==3.0.10
+    # via
+    #   -r requirements.in
+    #   locust
+flask-login==0.6.3
+    # via locust
+gevent==23.9.1
+    # via
+    #   geventhttpclient
+    #   locust
+geventhttpclient==2.0.11
+    # via locust
+greenlet==3.0.3
+    # via gevent
 idna==3.6
     # via requests
 iniconfig==2.0.0
@@ -40,6 +59,8 @@ jinja2==3.1.3
     #   memray
 linkify-it-py==2.0.3
     # via markdown-it-py
+locust==2.23.1
+    # via -r requirements.in
 markdown-it-py[linkify,plugins]==3.0.0
     # via
     #   mdit-py-plugins
@@ -55,6 +76,8 @@ mdurl==0.1.2
     # via markdown-it-py
 memray==1.11.0
     # via -r requirements.in
+msgpack==1.0.7
+    # via locust
 numpy==1.26.3
     # via -r requirements.in
 packaging==23.2
@@ -65,6 +88,8 @@ pillow==10.2.0
     # via -r requirements.in
 pluggy==1.4.0
     # via pytest
+psutil==5.9.8
+    # via locust
 pygments==2.17.2
     # via rich
 pyinstrument==4.6.2
@@ -75,14 +100,22 @@ python-dotenv==1.0.0
     # via -r requirements.in
 pyyaml==6.0.1
     # via -r requirements.in
+pyzmq==25.1.2
+    # via locust
 requests==2.31.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   locust
 rich==13.7.0
     # via
     #   memray
     #   textual
+roundrobin==0.0.4
+    # via locust
 six==1.16.0
-    # via flask-cors
+    # via
+    #   flask-cors
+    #   geventhttpclient
 textual==0.50.1
     # via memray
 typing-extensions==4.9.0
@@ -94,6 +127,16 @@ urllib3==2.2.0
     #   elastic-transport
     #   requests
 werkzeug==3.0.1
-    # via flask
+    # via
+    #   flask
+    #   flask-login
+    #   locust
 wget==3.2
     # via -r requirements.in
+zope-event==5.0
+    # via gevent
+zope-interface==6.1
+    # via gevent
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
