--- a/src/api/config-indexer.yml
+++ b/src/api/config-indexer.yml
@@ -6,6 +6,7 @@ store :
     image_index_name : "image"
     text_index_name : "text"
     video_index_name : "video"
+    audio_index_name : "audio"
 
 queue : 
   label : "Queue"
@@ -19,18 +20,6 @@ queue :
 operators : 
   label : "Operators"
   parameters :
-    - name : "Language Detection"
-      type : "detect_lang_of_text"
-      parameters: {}
-    - name : "Text Extraction"
-      type : "detect_text_in_image"
-      parameters: {}
-    - name : "Named Entity Extraction"
-      type : "ner_extraction"
-      parameters: {}
-    - name : "Image Vector Representation"
-      type : "image_vec_rep_resnet"
-      parameters: {}
     - name : "Video Vector Representation"
       type : "vid_vec_rep_resnet"
       parameters: {
