--- a/src/api/Dockerfile.test_worker
+++ b/src/api/Dockerfile.test_worker
@@ -9,10 +9,12 @@ RUN apt-get update \
     libgl1-mesa-glx libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/* 
 ENV PATH=/root/.local/bin:$PATH
+RUN apt-get update && apt-get install -y vim zsh curl
 
 RUN pip install --no-cache-dir --upgrade pip
 WORKDIR /app
 COPY . /app
 EXPOSE 7000
 
-CMD tail -f /dev/null
+FROM base AS debug
+# CMD tail -f /dev/null
