refactor: vidvec benchmark files

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,16 @@ src/api/core/operators/yolov8n-seg.pt
 **100_audio_files/
 **50_audio_files/
 **audio_files/
+
+**credentials.json
+
+# memray
+**.bin
+**.html
+
+# pyinstrument
+**.json
+
+# locust
+**.csv
+
