feat: md5 operator

--- a/.gitignore
+++ b/.gitignore
@@ -132,10 +132,11 @@ src/core/operators/yolov8n-seg.pt
 # SonarQube
 .scannerwork
 
-# Audio Files
+# Audio and Video Files
 **100_audio_files/
 **50_audio_files/
 **audio_files/
+**video_files/
 
 **credentials.json
 
