--- a/src/worker/Dockerfile.test_worker
+++ b/src/worker/Dockerfile.test_worker
@@ -13,8 +13,14 @@ RUN apt-get update && apt-get install -y vim zsh curl
 
 RUN pip install --no-cache-dir --upgrade pip
 WORKDIR /app
+
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir --user -r requirements.txt
+# install video operator requirements
+COPY ./core/operators/vid_vec_rep_resnet_requirements.txt /app/core/operators/vid_vec_rep_resnet_requirements.txt
+RUN pip install --no-cache-dir --user -r /app/core/operators/vid_vec_rep_resnet_requirements.txt
+
 COPY . /app
 EXPOSE 7000
 
 FROM base AS debug
-# CMD tail -f /dev/null
