fix: video operator locaiton in Dockerfile

--- a/src/worker/vidvec/Dockerfile.test_video_worker
+++ b/src/worker/vidvec/Dockerfile.test_video_worker
@@ -17,7 +17,7 @@ WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --user -r requirements.txt
 # install video operator requirements
-COPY ./../../core/operators/vid_vec_rep_resnet_requirements.txt /app/core/operators/vid_vec_rep_resnet_requirements.txt
+COPY ./core/operators/vid_vec_rep_resnet_requirements.txt /app/core/operators/vid_vec_rep_resnet_requirements.txt
 RUN pip install --no-cache-dir --user -r /app/core/operators/vid_vec_rep_resnet_requirements.txt
 
 COPY . /app
