--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -78,6 +78,8 @@ memray==1.11.0
     # via -r requirements.in
 msgpack==1.0.7
     # via locust
+nose2==0.14.1
+    # via -r requirements.in
 numpy==1.26.3
     # via -r requirements.in
 packaging==23.2
