- Added log outputs and failure condition

--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -24,4 +24,10 @@ jobs:
         run: docker compose -f ./.ci/docker-compose.yml -p ci build
 
       - name: Launch containers to run tests
-        run: docker compose -f ./.ci/docker-compose.yml -p ci up -d store queue sut
+        run: |
+          docker compose -f ./.ci/docker-compose.yml -p ci up -d store queue sut
+          docker logs -f ci-sut-1
+
+      - name: Check failure
+        if: $ {{ docker wait ci-sut-1 }} != 0
+        run: exit 1
