ci: Add automated semantic versioning - Renamed and modified docker push vidvec benchmark yml - Modified tags and dockerfile name for vidvec worker staging yml - Added init python file with version number - Added github workflow on merge on main branch - Added github workflow on merge on development or hotfix branch

--- a/.github/workflows/docker-push-vidvec-worker-staging.yml
+++ b/.github/workflows/docker-push-vidvec-worker-staging.yml
@@ -28,6 +28,6 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           name: tattletech/feluda-operator-vidvec
           workdir: src/
-          dockerfile: worker/vidvec/Dockerfile.test_video_worker
-          tags: latest-amd64
+          dockerfile: worker/vidvec/Dockerfile.video_worker
+          tags: worker-amd64-latest
           platforms: linux/amd64
