--- a/.github/workflows/docker-push-vidvec-benchmark.yml
+++ b/.github/workflows/docker-push-vidvec-benchmark.yml
@@ -27,18 +27,18 @@ jobs:
           username: tattletech
           password: ${{ secrets.DOCKER_PASSWORD }}
           name: tattletech/feluda-operator-vidvec
-          workdir: src/benchmark/vidvec/
-          dockerfile: Dockerfile.vid_vec_rep_resnet
-          tags: ${{ steps.vars.outputs.sha_short }}-amd64
+          workdir: src/
+          dockerfile: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet
+          tags: benchmark-amd64-latest
           platforms: linux/amd64
       - uses: elgohr/Publish-Docker-Github-Action@main
         with:
           username: tattletech
           password: ${{ secrets.DOCKER_PASSWORD }}
           name: tattletech/feluda-operator-vidvec
-          workdir: src/benchmark/vidvec/
-          dockerfile: Dockerfile.vid_vec_rep_resnet.graviton
-          tags: ${{ steps.vars.outputs.sha_short }}-arm64
+          workdir: src/
+          dockerfile: benchmark/vidvec/Dockerfile.vid_vec_rep_resnet.graviton
+          tags: benchmark-arm64-latest
           platforms: linux/arm64
 
       # - name: deploy to cluster
