--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Publish vidvec amd64 benchmark to dockerhub
-        if: steps.release.outcome == 'success'
+        # if: steps.release.outcome == 'success'
         uses: elgohr/Publish-Docker-Github-Action@main
         with:
           username: tattletech
@@ -62,7 +62,7 @@ jobs:
           platforms: linux/amd64
 
       - name: Publish vidvec arm64 benchmark to dockerhub
-        if: steps.release.outcome == 'success'
+        # if: steps.release.outcome == 'success'
         uses: elgohr/Publish-Docker-Github-Action@main
         with:
           username: tattletech
@@ -74,7 +74,7 @@ jobs:
           platforms: linux/arm64
 
 #      - name: Publish vidvec amd64 worker to dockerhub
-#        if: steps.release.outcome == 'success'
+#        #if: steps.release.outcome == 'success'
 #        uses: elgohr/Publish-Docker-Github-Action@main
 #        with:
 #          username: tattletech
