--- a/.github/workflows/pr-tests.yml
+++ b/.github/workflows/pr-tests.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Launch containers to run tests
         id: vars
         run: |
-          docker compose -f ./.ci/docker-compose.yml -p ci up -d store queue sut
+          docker compose -f ./.ci/docker-compose.yml -p ci up -d sut
           docker logs -f ci-sut-1
           echo "sut_output=$(docker wait ci-sut-1)" >> $GITHUB_OUTPUT
 
