feat: workers to search audio and video files

--- a/src/worker/audiovec/config.yml
+++ b/src/worker/audiovec/config.yml
@@ -16,6 +16,8 @@ queue :
     queues:
       - name : "audio-index-queue"
       - name : "report-queue"
+      - name : "audio-search-queue"
+      - name : "search-result-queue"
 
 operators : 
   label : "Operators"
