--- a/src/worker/vidvec/Dockerfile.video_worker.graviton
+++ b/src/worker/vidvec/Dockerfile.video_worker.graviton
@@ -4,11 +4,9 @@ RUN apt-get update \
     && apt-get install -y \
     --no-install-recommends gcc build-essential \
     --no-install-recommends libgl1-mesa-glx libglib2.0-0 \
-    && apt-get purge -y --auto-remove \
-    gcc build-essential \
-    libgl1-mesa-glx libglib2.0-0 \
-    && rm -rf /var/lib/apt/lists/* 
+    --no-install-recommends python3-dev
 ENV PATH=/root/.local/bin:$PATH
+RUN apt-get update && apt-get install -y vim zsh curl
 
 RUN pip install --no-cache-dir --upgrade pip
 WORKDIR /app
@@ -41,6 +39,12 @@ ENV OMP_NUM_THREADS=1
 ENV OMP_PROC_BIND=false
 ENV OMP_PLACES=cores
 ###
+
+RUN apt-get purge -y --auto-remove \
+    gcc build-essential \
+    libgl1-mesa-glx libglib2.0-0 \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY . /app
 EXPOSE 7000
