--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,45 +41,61 @@ services:
       - 5672:5672
       - 15672:15672
 
-  api:
-    container_name: feluda_api
+  # api:
+  #   container_name: feluda_api
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile
+  #     target: debug
+  #   volumes:
+  #     - ./src:/app
+  #   env_file: ./src/development.env
+  #   ports:
+  #     - 7000:7000
+  #     - 5678:5678
+  #   command: tail -f /dev/null
+  #   depends_on:
+  #     store:
+  #       condition: service_started
+  #     queue:
+  #       condition: service_started
+
+  # indexer:
+  #   container_name: feluda_indexer
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile
+  #     target: debug
+  #   env_file: ./src/development.env
+  #   command: tail -f /dev/null
+  #   depends_on:
+  #     store:
+  #       condition: service_started
+  #     queue:
+  #       condition: service_started
+
+  # reporter:
+  #   container_name: feluda_reporter
+  #   build:
+  #     context: ./src
+  #     dockerfile: Dockerfile
+  #     target: debug
+  #   env_file: ./src/development.env
+  #   command: tail -f /dev/null
+  #   depends_on:
+  #     store:
+  #       condition: service_started
+  #     queue:
+  #       condition: service_started
+
+  worker:
+    container_name: feluda_worker
     build:
       context: ./src
-      dockerfile: Dockerfile
+      dockerfile: worker/md5hash/Dockerfile.md5hash_worker
       target: debug
     volumes:
       - ./src:/app
-    env_file: ./src/development.env
-    ports:
-      - 7000:7000
-      - 5678:5678
-    command: tail -f /dev/null
-    depends_on:
-      store:
-        condition: service_started
-      queue:
-        condition: service_started
-
-  indexer:
-    container_name: feluda_indexer
-    build:
-      context: ./src
-      dockerfile: Dockerfile
-      target: debug
-    env_file: ./src/development.env
-    command: tail -f /dev/null
-    depends_on:
-      store:
-        condition: service_started
-      queue:
-        condition: service_started
-
-  reporter:
-    container_name: feluda_reporter
-    build:
-      context: ./src
-      dockerfile: Dockerfile
-      target: debug
     env_file: ./src/development.env
     command: tail -f /dev/null
     depends_on:
